--- a/app/jni/CMakeLists.txt
+++ b/app/jni/CMakeLists.txt
@@ -8,12 +8,12 @@ project(GAME)
 
 
 # SDL sources are in a subfolder named "SDL"
-add_subdirectory(SDL)
+add_subdirectory(SDL2)
 
 # Compilation of companion libraries
-add_subdirectory(SDL_image)
+add_subdirectory(SDL2_image)
 #add_subdirectory(SDL_mixer)
-add_subdirectory(SDL_ttf)
+add_subdirectory(SDL2_ttf)
 
 # Your game and its CMakeLists.txt are in a subfolder named "src"
 add_subdirectory(src)
